[package]
name = "promethee"
version = "0.1.0"
edition = "2021"
license = "CC BY-NC-SA 4.0"
license-file = "LICENSE"

[profile.release]
codegen-units = 1           # reduces binary size by ~2%
debug = "full"              # No one needs an undebuggable release binary
lto = true                  # reduces binary size by ~14%
opt-level = "s"             # reduces binary size by ~25%
panic = "abort"             # reduces binary size by ~50% in combination with -Zbuild-std-features=panic_immediate_abort
split-debuginfo = "packed"  # generates a seperate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"           # See split-debuginfo - allows us to drop the size by ~65%

[dependencies]
csv = "1.3"
fern = { version = "0.7", features = ["colored"] }
humantime = "2.1.0"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
strsim = "0.11.1"
windows-elevate = "0.1.0"
regex = "1.11.1"
tempfile = "3.14.0"
serde_ini = "0.2.0"
serde_plain = "1.0.2"
field_accessor = "0.5"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
widestring = "1.1.0"
dunce = "1.0.5"
phf = { version = "0.11", features = ["macros"] }
sys-locale = "0.3.2"
codepage-437 = "0.1.0"
chrono = "0.4.39"
winfw = "0.1.8"
serde_json = "1.0"
convert_case = "0.7.1"
clap = { version = "4.5.27", features = ["derive"] }
indicatif-log-bridge = "0.2.3"
indicatif = "0.17.9"
colored = "3.0.0"
[dependencies.winsafe]
version = "0.0.22"
features = [
    "kernel",
    "advapi",
    "ole",
]
[dependencies.windows]
version = "0.58"
features = [
    "Win32_System_Com",
    "Win32_System_SystemInformation",
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_System_Ole",
    "Win32_System_Variant",
]
